--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-passport": "^4.1.3",
     "koa-router": "^10.0.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.11.11",
     "mongoose-private-paths": "^0.7.0",
     "onchange": "^7.1.0",
