--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=4501 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier-format": "prettier --config .prettierrc ./src/**/*.{ts,tsx} --write",
-    "prettier-watch": "onchange src/**/*.ts -- prettier --write {{changed}}"
+    "prettier-format": "prettier --config .prettierrc ./src/**/*.{ts,tsx,scss} --write",
+    "prettier-watch": "onchange ./src/**/*.{ts,tsx,scss} -- prettier --write {{changed}}"
   },
   "husky": {
     "hooks": {
@@ -42,12 +42,24 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "husky": "^4.3.8",
+    "jwt-decode": "^3.1.2",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.32.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "onchange": "^7.1.0"
   }
 }
