--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
@@ -45,6 +46,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "husky": "^4.3.8",
     "jwt-decode": "^3.1.2",
     "normalize.css": "^8.0.1",
