--- a/client/package.json
+++ b/client/package.json
@@ -1,67 +1,69 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "set PORT=4501 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prettier-format": "prettier --config .prettierrc ./src/**/*.{ts,tsx,scss} --write",
-    "prettier-watch": "onchange ./src/**/*.{ts,tsx,scss} -- prettier --write {{changed}}"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn prettier-format",
-      "pre-push": ""
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "client dev": "set PORT=4501 && react-scripts start",
+        "client build": "react-scripts build",
+        "client test": "react-scripts test",
+        "client eject": "react-scripts eject",
+        "client prettier-format": "prettier --config .prettierrc ./src/**/*.{ts,tsx,scss} --write",
+        "client prettier-watch": "onchange ./src/**/*.{ts,tsx,scss} -- prettier --write {{changed}}"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "yarn \"client prettier-format\"",
+            "pre-push": ""
+        }
+    },
+    "proxy": "http://localhost:8080",
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/classnames": "^2.2.11",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.9.53",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.16",
+        "@types/react-router-dom": "^5.1.7",
+        "axios": "^0.21.1",
+        "classnames": "^2.2.6",
+        "husky": "^4.3.8",
+        "jwt-decode": "^3.1.2",
+        "normalize.css": "^8.0.1",
+        "prettier": "^2.2.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.1",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-thunk": "^2.3.0",
+        "sass": "^1.32.5",
+        "typescript": "^4.0.3",
+        "web-vitals": "^0.2.4"
+    },
+    "devDependencies": {
+        "onchange": "^7.1.0"
     }
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
-    "axios": "^0.21.1",
-    "classnames": "^2.2.6",
-    "husky": "^4.3.8",
-    "jwt-decode": "^3.1.2",
-    "normalize.css": "^8.0.1",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.32.5",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
-  },
-  "devDependencies": {
-    "onchange": "^7.1.0"
-  }
 }
