--- a/client/package.json
+++ b/client/package.json
@@ -44,16 +44,19 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
+        "@types/react-notifications-component": "^3.1.0",
         "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.7",
         "axios": "^0.21.1",
         "classnames": "^2.2.6",
+        "formik": "^2.2.6",
         "husky": "^4.3.8",
         "jwt-decode": "^3.1.2",
         "normalize.css": "^8.0.1",
         "prettier": "^2.2.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-notifications-component": "^3.1.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
