--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,7 @@
         "client dev": "set PORT=4501 && react-scripts start",
         "client build": "react-scripts build",
         "client test": "react-scripts test",
-        "client eject": "react-scripts eject",
-        "client prettier-format": "prettier --config .prettierrc ./src/**/*.{ts,tsx,scss} --write",
-        "client prettier-watch": "onchange ./src/**/*.{ts,tsx,scss} -- prettier --write {{changed}}"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "yarn \"client prettier-format\"",
-            "pre-push": ""
-        }
+        "client eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
@@ -50,7 +42,6 @@
         "axios": "^0.21.1",
         "classnames": "^2.2.6",
         "formik": "^2.2.6",
-        "husky": "^4.3.8",
         "jwt-decode": "^3.1.2",
         "normalize.css": "^8.0.1",
         "prettier": "^2.2.1",
@@ -59,11 +50,11 @@
         "react-notifications-component": "^3.1.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.1",
+        "react-scripts": "^3.1.1",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
         "sass": "^1.32.5",
-        "typescript": "^4.0.3",
+        "typescript": "^3.7.0-beta",
         "web-vitals": "^0.2.4"
     },
     "devDependencies": {
