--- a/package.json
+++ b/package.json
@@ -1,3 +1,16 @@
 {
-  "dependencies": {}
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.1"
+  },
+  "scripts": {
+    "prettier-format": "prettier --config .prettierrc ./**/*.ts --write",
+    "prettier-watch": "onchange ./**/*.ts -- prettier --write {{changed}}",
+    "lint": "eslint ./src --ext .ts",
+    "lint-and-fix": "eslint ./src --ext .ts --fix"
+  }
 }
