--- a/client/package.json
+++ b/client/package.json
@@ -59,7 +59,7 @@
         "react-notifications-component": "^3.1.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "4.0.1",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
         "sass": "^1.32.5",
