--- a/package.json
+++ b/package.json
@@ -1,16 +1,3 @@
 {
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.1"
-  },
-  "scripts": {
-    "prettier-format": "prettier --config .prettierrc ./**/*.ts --write",
-    "prettier-watch": "onchange ./**/*.ts -- prettier --write {{changed}}",
-    "server lint": "eslint ./server/**/*.ts --ext .ts",
-    "server lint-and-fix": "eslint ./server/**/*.ts --ext .ts --fix"
-  }
+  "dependencies": {}
 }
